ulisa/bkp/sa/hls2023/sa/z020/.autopilot/db/sa.pp.0.cpp.clang-tidy.loop-label.out.log
/home/fabiob/sa/hls2023/sa/z020/.autopilot/db/sa.pp.0.cpp:7321:7: warning: Added loop label VITIS_LOOP_1207_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1207_1: 
/home/fabiob/sa/hls2023/sa/z020/.autopilot/db/sa.pp.0.cpp:7321:7: note: FIX-IT applied suggested code changes
/home/fabiob/sa/hls2023/sa/z020/.autopilot/db/sa.pp.0.cpp:8295:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/home/fabiob/sa/hls2023/sa/z020/.autopilot/db/sa.pp.0.cpp:8295:5: note: FIX-IT applied suggested code changes
/home/fabiob/sa/hls2023/sa/z020/.autopilot/db/sa.pp.0.cpp:8309:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/home/fabiob/sa/hls2023/sa/z020/.autopilot/db/sa.pp.0.cpp:8309:5: note: FIX-IT applied suggested code changes
/home/fabiob/sa/hls2023/sa/z020/.autopilot/db/sa.pp.0.cpp:8323:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/home/fabiob/sa/hls2023/sa/z020/.autopilot/db/sa.pp.0.cpp:8323:5: note: FIX-IT applied suggested code changes
/home/fabiob/sa/hls2023/sa/z020/.autopilot/db/sa.pp.0.cpp:9952:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
/home/fabiob/sa/hls2023/sa/z020/.autopilot/db/sa.pp.0.cpp:9952:7: note: FIX-IT applied suggested code changes
/home/fabiob/sa/hls2023/sa/z020/.autopilot/db/sa.pp.0.cpp:38297:9: error: Resource with core_name: Mul_LUT pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=res_ba core=Mul_LUT
        ^
/home/fabiob/sa/hls2023/sa/z020/.autopilot/db/sa.pp.0.cpp:38298:9: error: Resource with core_name: Mul_LUT pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=prod_iw core=Mul_LUT
        ^
